Learned how to use prompts in Svelte

--- a/svelte-dojo/tsconfig.json
+++ b/svelte-dojo/tsconfig.json
@@ -5,6 +5,11 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "resolveJsonModule": true,
+
+    // NOTE: This line is needed for importing TypeScript files
+    // like in lesson 12-universal-reactivity
+    "allowImportingTsExtensions": true,
+
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
@@ -19,3 +24,9 @@
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
+
+ //    ~/dezly-dojos/svelte-dojo/  2 
+ //   └╴  tsconfig.json  2 
+ //     ├╴E Option 'allowImportingTsExtensions' can only be used when either 'noEmit' or 'emitDeclarationOnly' is set. ts  [10, 35]
+ //     └╴E Referenced project '/home/dezly-macauley/dezly-dojos/svelte-dojo/tsconfig.node.json' may not disable emit. ts  [24, 18]
