--- a/python-dojo/pyproject.toml
+++ b/python-dojo/pyproject.toml
@@ -3,5 +3,7 @@ name = "python-dojo"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = []
+requires-python = ">=3.10"
+dependencies = [
+    "titanoboa>=0.2.5",
+]
